--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,6 @@ img {
     border: 4px solid #555;
 }
 
-.greeting h1{
-    margin:0
-}
-
-.greeting h2{
-    margin:0
+.greeting{
+    padding: 0%;
 }
