--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
-img {
+.headshot img{
     width: 200px;
     height: 200px;
     margin-left: auto;
     margin-right: auto;
-    /* border-radius: calc(var(--image) * 2);
-    border: 4px solid #555; */
+    border-radius:  25%;
+    border: 4px solid #555;
 }
 
 .greeting h1, .greeting h3 {
     margin: 0%;
     padding: 0%;
     font-weight: normal;
+}
+
+.greeting{
+    color: #222222;
 }
 
 
@@ -26,4 +30,5 @@ img {
 
 body{
     text-align: center;
+    display: block;
 }
